--- a/Dynamical Levy Lattice/main.ipynb
+++ b/Dynamical Levy Lattice/main.ipynb
@@ -550,7 +550,7 @@
         "\n",
         "Parameters = {\n",
         "    'Prescription' : 'metropolis', #'metropolis' 'glauber'\n",
-        "    'Boundary Condition' : 'PBC', #'PBC', 'infinite_PBC', 'positiveBC\n",
+        "    'Boundary Condition' : 'PBC', #'PBC', 'infinite PBC', 'positiveBC\n",
         "    'Start' : 'hot',\n",
         "    'Dimension' : 1,\n",
         "    'Sigma' : 1,\n",
